# DesignPatterns

./: .travis.yml  .travis.yml.swp  Back-Up_Script  GameScheme.drawio  README.md
GameDir/: CMakeLists.txt  command.cpp  command.h  commander.cpp  commander.h  composite_and_iterator.cpp  composite_and_iterator.h  main.cpp  test.cpp  unit.cpp  unit.h
Project/DesignPatterns/: .~lock.README.docx#  README.docx
Project/DesignPatterns:Game/: CMakeLists.txt  main.cpp
Project/untitled/: main.cpp
Project/untitled1/: main.cpp
Project/untitled2/: main.cpp
Project/untitled3/: main.cpp
Project/untitled4/: main.cpp
Project/untitled5/: main.cpp
Project/untitled6/: Commanders.cpp  UnitFactory.cpp  UnitFactory.h  Units.cpp  Units.h  main.cpp
Project/untitled7/: main.cpp  unit.cpp  unit.h
Project/untitled8/: CMakeLists.txt  unit.h
Projects/untitled/: main.cpp
Projects/untitled1/: main.cpp
Projects/untitled2/: main.cpp
Projects/untitled3/: main.cpp
Projects/untitled4/: main.cpp
Projects/untitled5/: main.cpp
Projects/untitled6/: main.cpp
Projects/untitled7/: main.cpp
Projects/untitled8/: main.cpp
Projects/untitled9/: main.cpp
